# imagage_recognition_mobile_multilabel

./: .gitignore  README.md
mobile/: requerimientos
mobile/image_recognition/: .metadata  README.md  ffigen.yaml  pubspec.yaml
mobile/image_recognition/android/: build.gradle  settings.gradle
mobile/image_recognition/example/: COMO_EJECUTAR.md  README.md  README_PRUEBA.md  pubspec.yaml
mobile/image_recognition/example/assets/: inference_config.json  labels.txt
mobile/image_recognition/example/lib/: image_classifier.dart  main.dart
mobile/image_recognition/ios/: image_recognition.podspec
mobile/image_recognition/ios/Classes/: image_recognition.c
mobile/image_recognition/ios/Frameworks/: README.txt
mobile/image_recognition/native/include/: image_recognition.h
mobile/image_recognition/src/: CMakeLists.txt  image_recognition.c
mobile/mobile/image_recognition/: ffigen.yaml
trainer/: GUIA_DATASETS.md  IMPLEMENTACION_COMPLETADA.md  INICIO_RAPIDO.md  README.md  SISTEMA_COMPLETO.md  manual.ultimo.15-dic.md  requerimientos
trainer/training/: Dockerfile  README.md  docker-compose.yml  requirements.txt
trainer/training/configs/: default.yaml
trainer/training/src/: __init__.py  cli.py
trainer/training/src/eval/: metrics.py  thresholds.py
trainer/training/src/export/: __init__.py  metadata.py  tflite_export.py
trainer/training/src/models/: losses.py  student.py  teacher.py
trainer/training/src/train/: callbacks.py  train_student_distill.py  train_student_qat.py  train_teacher.py
trainer/training/tests/: test_letterbox.py
(+7 files in other folders)
